# fdf

./: CMakeLists.txt  Makefile  README.md  fdf
includes/: color.h  fdf.h  keysmac.h  quaterni.h
libft/: ft_abs.c  ft_strsplit.c  get_next_line.h  libft.h
maps/: map.fdf
srcs/: bresenham.c  bresenham_img.c  caminit.c  checks.c  clean.c  cntrl.c  coords.c  dimens.c  draw.c  fdf_init.c  keymlx.c  keys.c  main.c  menu.c  mouse.c  quaterni.c  read.c  test
